<resources>
    <string name="app_name">工大认证</string>
    <string name="app_author">开发@无白Herk</string>
    <string name="app_version_code">务必到 build.gradle.app 中更新版本码</string>
    <string name="app_version_name">1.2.3</string>

    <string name="navigation_drawer_open">打开侧滑导航栏</string>
    <string name="navigation_drawer_close">关闭侧滑导航栏</string>
    <string name="nav_header_desc">导航栏头部</string>

    <string name="activity_login_title">添加账号</string>
    <string name="nav_header_title">欢迎您的使用</string>
    <string name="nav_header_username">点击登录或修改账号</string>
    <string name="menu_account">主页认证</string>
    <string name="menu_setting">服务设置</string>
    <string name="menu_about">关于帮助</string>

    <string name="prompt_username">学号</string>
    <string name="prompt_password">密码</string>

    <string name="action_login">登录</string>
    <string name="action_logout">退出</string>
    <string name="action_setting">设置</string>

    <string name="feedback_jump_tips">点击图标自动跳转</string>
    <string name="radio_cmcc">中国移动</string>
    <string name="radio_telecom">中国电信</string>
    <string name="app_version_name_prefix">版本：V </string>
    <string name="app_slogan">畅享极致的网络体验</string>
    <string name="one_key_autologin">一键认证</string>
    <string name="app_slogan1">点击按钮，畅享网络</string>
    <string name="app_update_btn">版本更新</string>
    <string name="app_feedback">联系反馈</string>
    <string name="app_help">帮助说明</string>
    <string name="app_description">《工大认证》是一款校园网自动认证的APP，致力于简化繁琐的登录过程。欢迎反馈问题及提出建议~</string>
    <string name="app_user_protocol">用户协议</string>
    <string name="app_privacy_agreement">隐私政策</string>
    <string name="app_copyright_declare">copyright© 2021 Herk All rights reserved</string>
    <string name="action_gardnet_btn">守护服务</string>
    <string name="action_autorun_btn">软件自启</string>

    <string name="notification_title">网络守护服务</string>
    <string name="notification_message">保障校园网持续畅通 联系反馈@Herk</string>
    <string name="ticker_text">网络守护服务</string>
    <string name="get_help_btn">详细的说明</string>
    <string name="go_my_page">前往官网</string>
    <string name="down_win_version">下载电脑版</string>


</resources>