<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_account">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.herk.njtechlogin.ui.home.HomeFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.herk.njtechlogin.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.herk.njtechlogin.ui.info.InfoFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_info" />

</navigation>