<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginData"
            type="com.herk.njtechlogin.login.LoginData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.herk.njtechlogin.login.LoginActivity">

        <TextView
            android:id="@+id/textBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_box"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h7"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h6"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_card"
            android:hint="@string/prompt_username"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@{loginData.username}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/passwordEdit"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v1"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_card"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:text="@{loginData.password}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/interCompany"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v1"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioGroup
            android:id="@+id/interCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checkedButton="@id/cmccRbtn"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v1">

            <RadioButton
                android:id="@+id/cmccRbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_cmcc"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/teleRbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_telecom"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/bg_card_gray"
            android:enabled="true"
            android:text="@string/action_login"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h3"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_v1" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_author"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h4"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.57" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/authorText"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
            app:layout_constraintStart_toStartOf="@+id/guideline_v1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_name_prefix" />

            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_name"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="222dp"
            android:layout_height="137dp"
            app:layout_constraintBottom_toTopOf="@+id/usernameEdit"
            app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/guideline_v1"
            app:srcCompat="@drawable/doraemon_head" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>